added missimg ingress config for redirection!

--- a/.ebextensions/10_elastic_beanstalk_elb_http.config
+++ b/.ebextensions/10_elastic_beanstalk_elb_http.config
@@ -3,3 +3,12 @@ option_settings:
     ListenerProtocol: HTTP
     InstancePort: 81
     InstanceProtocol: HTTP
+Resources:
+  httpSecurityGroupIngress: 
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: {"Fn::GetAtt" : ["AWSEBSecurityGroup", "GroupId"]}
+      IpProtocol: tcp
+      ToPort: 81
+      FromPort: 81
+      SourceSecurityGroupId: {"Fn::GetAtt" : ["AWSEBLoadBalancerSecurityGroup", "GroupId"]}
