introduced partials to modularize html and share across pages

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -5,6 +5,7 @@ env:
 rules:
     no-undefined: off
     no-var: off
+    no-alert: off
     no-unused-vars:
       - error
       - argsIgnorePattern: next
