--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "schibsted-sdk-example",
-	"version": "2.0.0",
+    "description": "An example website that uses Schibsted's new browser SDK",
+	"version": "2.1.0",
 	"license": "MIT",
 	"main": "server.js",
 	"repository": {},
