--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,11 @@
-node_modules
+.dockerignore
+.editorconfig
+.env-template
+.eslintrc.yml
+.git
+.gitignore
+.travis.yml
+.vscode
+docker
+README.md
+scripts
