--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,10 @@
 root = true
 
 [*]
+end_of_line = lf
 indent_style = space
 indent_size = 4
 insert_final_newline = true
 max_line_length = 100
-
-[*.{js,json}]
-charset = utf-8
 trim_trailing_whitespace = true
+charset = utf-8
