--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,28 @@
-extends: schibsted
+extends: eslint:recommended
+plugins:
+  - import
 env:
+    browser: true
+    es6: true
     node: true
-    mocha: true
+parserOptions:
+    ecmaVersion: 2017
 rules:
     no-undefined: off
     no-var: off
-    no-alert: off
+    indent:
+      - warn
+      - 4
+    no-console: off
     no-unused-vars:
       - error
       - argsIgnorePattern: next
-    require-jsdoc:
-      - warn
     valid-jsdoc:
       - error
       - requireParamDescription: false
         requireReturnDescription: false
     max-nested-callbacks:
       - error
-      - 4
+      - 5
     camelcase: off
+    padded-blocks: off
