--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ deploy:
     script: ./scripts/internal_travis_trigger.sh
     skip_cleanup: true
     on:
-      branch: big-update
+      branch: master
