Try to improve ‘npm run dev’
It didn’t pick up any changes to the browser/ stuff, which was annoying.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "build": "./build.sh",
-    "dev": "nodemon -i dist",
+    "dev": "./watch.sh && nodemon -w . -w browser -w dist server.js",
     "lint": "eslint ."
   },
   "dependencies": {
