--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sdk-example",
   "description": "An example website that uses Schibsted's new browser SDK",
-  "version": "4.5.7",
+  "version": "4.5.8",
   "license": "MIT",
   "main": "server.js",
   "repository": {
@@ -14,7 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@schibsted/account-sdk-browser": "^3.0.1-rc.1",
+    "@schibsted/account-sdk-browser": "^3.0.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^5.0.0",
     "express": "^4.15.3",
