--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "getenv": "^0.7.0",
-    "hbs": "^4.0.2",
+    "hbs": "^4.0.4",
     "helmet": "^3.13.0",
     "jsonwebtoken": "^8.3.0",
     "node-fetch": "^2.2.0",
@@ -32,6 +32,7 @@
     "token-introspection": "^1.1.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.12.0",
@@ -39,7 +40,7 @@
     "nodemon": "^1.18.3",
     "regenerator-runtime": "^0.11.1",
     "webpack": "^4.16.5",
-    "webpack-cli": "^2.1.5"
+    "webpack-cli": "^3.3.2"
   },
   "babel": {
     "presets": [
