--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.schibsted.io/spt-identity/sdk-example.com"
   },
   "scripts": {
-    "build": "./build.sh",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && ./build.sh",
     "dev": "./watch.sh && nodemon -w . -w browser -w dist server.js",
     "lint": "eslint ."
   },
