--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@schibsted/account-sdk-browser": "4.8.6-beta",
+    "@schibsted/account-sdk-browser": "^4.8.6-beta.2",
     "cookie-parser": "^1.4.4",
     "dotenv": "^5.0.0",
     "express": "^4.17.1",
