oops: Update example version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sdk-example",
   "description": "An example website that uses Schibsted's new browser SDK",
-  "version": "5.9.4-beta",
+  "version": "5.9.4-beta.2",
   "license": "MIT",
   "main": "server.js",
   "repository": {
