--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "passport": "^0.7.0",
     "passport-oauth2": "^1.6.1",
     "passport-oauth2-middleware": "^1.0.3",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "axios": "^1.6.5",
     "token-introspection": "^3.2.0"
   },
   "devDependencies": {
