--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.schibsted.io/spt-identity/sdk-example.com"
   },
   "scripts": {
-    "build": "./build.sh",
+    "build": "webpack --mode production",
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider && ./watch.sh && nodemon -w . -w browser -w dist server.js",
     "lint": "eslint ."
   },
@@ -33,13 +33,13 @@
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/preset-env": "^7.23.8",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^9.1.3",
     "eslint": "^8.56.0",
     "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.0.3",
     "regenerator-runtime": "^0.14.1",
-    "webpack": "^4.47.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "babel": {
     "presets": [
