--- a/package.json
+++ b/package.json
@@ -9,38 +9,37 @@
     "url": "https://github.schibsted.io/spt-identity/sdk-example.com"
   },
   "scripts": {
-    "build": "./build.sh",
+    "build": "webpack --mode production",
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider && ./watch.sh && nodemon -w . -w browser -w dist server.js",
     "lint": "eslint ."
   },
   "dependencies": {
     "@schibsted/account-sdk-browser": "^4.8.6-beta.2",
-    "cookie-parser": "^1.4.4",
-    "dotenv": "^5.0.0",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "getenv": "^0.7.0",
-    "hbs": "^4.1.1",
-    "helmet": "^3.21.2",
-    "jsonwebtoken": "^8.5.1",
-    "node-fetch": "^2.6.0",
-    "passport": "^0.4.0",
-    "passport-oauth2": "^1.5.0",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.17.3",
+    "express-session": "^1.17.3",
+    "getenv": "^1.0.0",
+    "hbs": "^4.2.0",
+    "helmet": "^3.23.3",
+    "jsonwebtoken": "^9.0.0",
+    "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
+    "passport-oauth2": "^1.6.1",
     "passport-oauth2-middleware": "^1.0.3",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4",
-    "token-introspection": "^1.2.0"
+    "axios": "^1.6.5",
+    "token-introspection": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.23.2",
-    "babel-loader": "^8.1.0",
-    "eslint": "^4.12.0",
-    "eslint-plugin-import": "^2.18.0",
-    "nodemon": "^2.0.4",
-    "regenerator-runtime": "^0.11.1",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6"
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-plugin-import": "^2.29.1",
+    "nodemon": "^3.0.3",
+    "regenerator-runtime": "^0.14.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "babel": {
     "presets": [
