--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,20 @@
+dist: focal
+
 language: node_js
-sudo: false
-node_js:
-- '14'
-cache:
-  directories:
-  - node_modules
-install: npm install
+
+node_js: '18'
+
+cache: npm
+
+install: npm ci
+
 script:
-  - npm run lint
-  - npm run build
+    - npm run lint
+    - npm run build
+
 deploy:
-  - provider: script
-    script: ./scripts/internal_travis_trigger.sh
-    skip_cleanup: true
-    on:
-      branch: master
+    - provider: script
+      script: ./scripts/internal_travis_trigger.sh
+      skip_cleanup: true
+      'on':
+          branch: master
