--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.15-alpine
+FROM node:18.19.0-alpine
 
 ENV NPM_CONFIG_LOGLEVEL warn
 
@@ -6,6 +6,6 @@ WORKDIR /usr/src/app
 
 COPY . ./
 
-RUN npm install && npm run build
+RUN npm ci && npm run build
 
-CMD ["node", "server"]
+CMD ["npm", "start"]
