--- a/package.json
+++ b/package.json
@@ -1,60 +1,68 @@
 {
-  "name": "sdk-example",
-  "description": "An example website that uses Schibsted's new browser SDK",
-  "version": "5.9.4-beta.2",
-  "license": "MIT",
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.schibsted.io/spt-identity/sdk-example.com"
-  },
-  "scripts": {
-    "build": "webpack --mode production",
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && ./watch.sh && nodemon -w . -w browser -w dist server.js",
-    "lint": "eslint ."
-  },
-  "dependencies": {
-    "@schibsted/account-sdk-browser": "^4.8.6-beta.2",
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
-    "express": "^4.17.3",
-    "express-session": "^1.17.3",
-    "getenv": "^1.0.0",
-    "hbs": "^4.2.0",
-    "helmet": "^3.23.3",
-    "jsonwebtoken": "^9.0.0",
-    "node-fetch": "^2.7.0",
-    "passport": "^0.7.0",
-    "passport-oauth2": "^1.6.1",
-    "passport-oauth2-middleware": "^1.0.3",
-    "axios": "^1.6.5",
-    "token-introspection": "^3.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.8",
-    "babel-loader": "^9.1.3",
-    "eslint": "^8.56.0",
-    "eslint-plugin-import": "^2.29.1",
-    "nodemon": "^3.0.3",
-    "regenerator-runtime": "^0.14.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "browsers": [
-              "last 2 major versions",
-              "ie 9"
+    "name": "sdk-example",
+    "description": "An example website that uses Schibsted's browser SDK",
+    "version": "5.9.5",
+    "license": "MIT",
+    "main": "server.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.schibsted.io/spt-identity/sdk-example.com"
+    },
+    "scripts": {
+        "build": "webpack --config webpack.prod.js",
+        "start": "node server.js",
+        "dev": "concurrently --kill-others  --names \"Webpack,Nodemon\" -c \"bgBlue.bold,bgMagenta.bold\" \"webpack --config webpack.dev.js\" \"npm run watch\"",
+        "lint": "eslint .",
+        "watch": "nodemon server.js"
+    },
+    "dependencies": {
+        "@schibsted/account-sdk-browser": "^4.8.6-beta.2",
+        "axios": "^1.6.5",
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.3.1",
+        "express": "^4.17.3",
+        "express-session": "^1.17.3",
+        "getenv": "^1.0.0",
+        "hbs": "^4.2.0",
+        "helmet": "^3.23.3",
+        "jsonwebtoken": "^9.0.0",
+        "node-fetch": "^2.7.0",
+        "passport": "^0.7.0",
+        "passport-oauth2": "^1.6.1",
+        "passport-oauth2-middleware": "^1.0.3",
+        "token-introspection": "^3.2.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.23.7",
+        "@babel/preset-env": "^7.23.8",
+        "@commitlint/cli": "^18.5.0",
+        "@commitlint/config-conventional": "^18.5.0",
+        "babel-loader": "^9.1.3",
+        "concurrently": "^8.2.2",
+        "eslint": "^8.56.0",
+        "eslint-plugin-import": "^2.29.1",
+        "husky": "^8.0.3",
+        "nodemon": "^3.0.3",
+        "regenerator-runtime": "^0.14.1",
+        "terser-webpack-plugin": "^5.3.10",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-merge": "^5.10.0"
+    },
+    "babel": {
+        "presets": [
+            [
+                "@babel/preset-env",
+                {
+                    "targets": {
+                        "browsers": [
+                            "last 2 major versions",
+                            "ie 9"
+                        ]
+                    }
+                }
             ]
-          }
-        }
-      ]
-    ]
-  },
-  "private": true
+        ]
+    },
+    "private": true
 }
