--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,3 +30,5 @@ jobs:
                 uses: actions/checkout@v3
             -   name: Run script
                 default: ./scripts/internal_travis_trigger.sh
+                env:
+                            INTERNAL_TRAVIS_TOKEN: ${{secrets.INTERNAL_TRAVIS_TOKEN}}
