feat: fix build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,6 @@ jobs:
             -   name: Checkout code
                 uses: actions/checkout@v3
             -   name: Run script
-                default: ./scripts/internal_travis_trigger.sh
+                run: ./scripts/internal_travis_trigger.sh
                 env:
                     INTERNAL_TRAVIS_TOKEN: ${{secrets.INTERNAL_TRAVIS_TOKEN}}
