--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "sdk-example",
     "description": "An example website that uses Schibsted's browser SDK",
-    "version": "5.9.10",
+    "version": "6.0.0",
     "license": "MIT",
     "main": "server.js",
     "repository": {
@@ -21,10 +21,12 @@
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
+        "express-handlebars": "^7.1.2",
         "express-session": "^1.17.3",
+        "flowbite": "^2.2.1",
         "getenv": "^1.0.0",
-        "hbs": "^4.2.0",
         "helmet": "^3.23.3",
+        "highlight.js": "^11.9.0",
         "jsonwebtoken": "^9.0.0",
         "node-fetch": "^2.7.0",
         "passport": "^0.7.0",
@@ -37,13 +39,24 @@
         "@babel/preset-env": "^7.23.8",
         "@commitlint/cli": "^18.5.0",
         "@commitlint/config-conventional": "^18.5.0",
+        "autoprefixer": "^10.4.17",
         "babel-loader": "^9.1.3",
         "concurrently": "^8.2.2",
-        "eslint": "^8.56.0",
+        "css-loader": "^6.10.0",
+        "eslint": "^8.57.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "husky": "^8.0.3",
         "nodemon": "^3.0.3",
+        "postcss": "^8.4.33",
+        "postcss-loader": "^8.1.0",
+        "prettier": "3.2.5",
         "regenerator-runtime": "^0.14.1",
+        "sass": "^1.70.0",
+        "sass-loader": "^14.1.0",
+        "style-loader": "^3.3.4",
+        "tailwindcss": "^3.4.1",
         "terser-webpack-plugin": "^5.3.10",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
