--- a/package.json
+++ b/package.json
@@ -37,13 +37,21 @@
         "@babel/preset-env": "^7.23.8",
         "@commitlint/cli": "^18.5.0",
         "@commitlint/config-conventional": "^18.5.0",
+        "autoprefixer": "^10.4.17",
         "babel-loader": "^9.1.3",
         "concurrently": "^8.2.2",
+        "css-loader": "^6.10.0",
         "eslint": "^8.56.0",
         "eslint-plugin-import": "^2.29.1",
         "husky": "^8.0.3",
         "nodemon": "^3.0.3",
+        "postcss": "^8.4.33",
+        "postcss-loader": "^8.1.0",
         "regenerator-runtime": "^0.14.1",
+        "sass": "^1.70.0",
+        "sass-loader": "^14.1.0",
+        "style-loader": "^3.3.4",
+        "tailwindcss": "^3.4.1",
         "terser-webpack-plugin": "^5.3.10",
         "webpack": "^5.89.0",
         "webpack-cli": "^5.1.4",
