--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "cookie-parser": "^1.4.6",
         "dotenv": "^16.3.1",
         "express": "^4.17.3",
+        "express-handlebars": "^7.1.2",
         "express-session": "^1.17.3",
         "getenv": "^1.0.0",
         "hbs": "^4.2.0",
